--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,8 @@ Author: NestoLab
 
 
 Notes:
-    Main Color : #2b344d rgba(43, 52, 77, 1)
-    Hover Color: #3d4a6e
+    Main Color : #FFAAAA rgba(66, 22, 22, 1)
+    Hover Color: #D76E6E
 
 1. General
     1.1 Main Styles
@@ -131,7 +131,7 @@ body {
     padding: 0;
     color: #666666;
     font-weight: normal;
-    background-color: #2b344d;
+    background-color: #FFAAAA;
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased !important;
     font: 14px/22px 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -148,7 +148,7 @@ body {
 
 /* 1.2 Anchor
 ---------------------------------------------------------------------------*/
-a { color: #2b344d; }
+a { color: #FFAAAA; }
 a,
 a > * {
     outline: none;
@@ -158,7 +158,7 @@ a > * {
 a:focus,
 a:hover {
     outline: none;
-    color: #3d4a6e;
+    color: #D76E6E;
     text-decoration: none;
 }
 
@@ -187,7 +187,7 @@ h5,
 h6 {
     margin: 0;
     padding: 0;
-    color: #2b344d;
+    color: #FFAAAA;
     line-height: 1.2;
     font-weight: normal;
     letter-spacing: 1px;
@@ -222,17 +222,17 @@ strong { font-weight: 700; }
 ::selection {
     color: #ffffff;
     text-shadow: none;
-    background-color: #2b344d;
+    background-color: #FFAAAA;
 }
 ::-webkit-selection {
     color: #ffffff;
     text-shadow: none;
-    background-color: #2b344d;
+    background-color: #FFAAAA;
 }
 ::-moz-selection {
     color: #ffffff;
     text-shadow: none;
-    background-color: #2b344d;
+    background-color: #FFAAAA;
 }
 
 
@@ -250,7 +250,7 @@ strong { font-weight: 700; }
     z-index: 999;
     padding: 20px 0;
     position: fixed;
-    background-color: rgba(43, 52, 77, 0.9);
+    background-color: rgba(66, 22, 22, 1);
 
     -webkit-transition: all 0.3s ease-in-out;
        -moz-transition: all 0.3s ease-in-out;
@@ -329,7 +329,7 @@ strong { font-weight: 700; }
 #home-section-container {
     width: 100%;
     overflow: hidden;
-    background-color: rgba(43, 52, 77, 0.7);
+    background-color: rgba(66, 22, 22, 0.8);
 }
 #home-wrapper {
     width: 100%;
@@ -474,7 +474,7 @@ img { border:none; }
     text-align: center;
     line-height: 90px;
     margin: 0 auto 25px;
-    background-color: #2b344d;
+    background-color: #FFAAAA;
 
     -webkit-border-radius: 10px;
        -moz-border-radius: 10px;
@@ -492,7 +492,7 @@ img { border:none; }
 
 /* 6.2.3 Hover
 ---------------------------------------------------------------------------*/
-.services-box:hover .services-icon { background-color: #3d4a6e; }
+.services-box:hover .services-icon { background-color: #D76E6E; }
 
 /* 6.2.4 Title
 ---------------------------------------------------------------------------*/
@@ -538,7 +538,7 @@ img { border:none; }
     width: 100%;
     overflow: hidden;
     padding: 100px 0 98px;
-    background-color: rgba(43, 52, 77, 0.9);
+    background-color: rgba(66, 22, 22, 0.9);
 }
 
 /* 7.2 Typography
@@ -610,7 +610,7 @@ img { border:none; }
     padding: 20px;
     text-align: center;
     position: absolute;
-    background-color: rgba(43, 52, 77, 0.9);
+    background-color: rgba(66, 22, 22, 0.9);
 
 	-webkit-border-radius: 5px;
        -moz-border-radius: 5px;
@@ -632,7 +632,7 @@ img { border:none; }
     z-index: 0;
     width: 40px;
     height: 40px;
-    color: #2b344d;
+    color: #FFAAAA;
     font-size: 1.5em;
     margin-top: -20px;
     line-height: 40px;
@@ -656,7 +656,7 @@ img { border:none; }
 ---------------------------------------------------------------------------*/
 .portfolio-overlayer a:hover {
     color: #ffffff;
-    background-color: #3d4a6e;
+    background-color: #D76E6E;
 }
 .portfolio-containt:hover .portfolio-overlayer { opacity: 1; }
 
@@ -747,7 +747,7 @@ ul.project-desc li {
     position: relative;
     margin: 0 auto 30px;
     padding: 35px 20px 30px;
-    background-color: #2b344d;
+    background-color: #FFAAAA;
 
     -webkit-border-radius: 10px;
        -moz-border-radius: 10px;
@@ -812,7 +812,7 @@ ul.project-desc li {
     width: 40px;
     height: 40px;
     z-index: 0;
-    color: #2b344d;
+    color: #FFAAAA;
     display: block;
     font-size: 1.5em;
     line-height: 40px;
@@ -827,10 +827,10 @@ ul.project-desc li {
 
 /* 9.2.6 Hover
 ---------------------------------------------------------------------------*/
-.member-box:hover { background-color: #3d4a6e; }
+.member-box:hover { background-color: #D76E6E; }
 .member-box a:hover {
     color: #ffffff;
-    background-color: #2b344d;
+    background-color: #FFAAAA;
 }
 
 
@@ -860,7 +860,7 @@ ul.project-desc li {
     width: 100%;
     padding: 100px 0;
     overflow: hidden;
-    background-color: rgba(43, 52, 77, 0.9);
+    background-color: rgba(66, 22, 22, 0.9);
 }
 #clients-section-wrapper p { color: #dedede; }
 
@@ -1026,10 +1026,10 @@ ul.project-desc li {
          -o-box-shadow: none;
             box-shadow: none;
 
-    -webkit-border: 2px solid #2b344d;
-       -moz-border: 2px solid #2b344d;
-         -o-border: 2px solid #2b344d;
-            border: 2px solid #2b344d;
+    -webkit-border: 2px solid #FFAAAA;
+       -moz-border: 2px solid #FFAAAA;
+         -o-border: 2px solid #FFAAAA;
+            border: 2px solid #FFAAAA;
 }
 
 /* 11.2.4 Button
@@ -1047,7 +1047,7 @@ ul.project-desc li {
 	top: 0;
     z-index: 2;
     float: right;
-    color: #2b344d;
+    color: #FFAAAA;
     position: relative;
     margin: -69px 15px 0 0;
 }
@@ -1096,7 +1096,7 @@ ul.project-desc li {
     overflow: hidden;
     position: relative;
     margin: -70px auto 0;
-    background-color: #2b344d;
+    background-color: #FFAAAA;
 
     -webkit-border-radius: 10px 10px 0 0;
        -moz-border-radius: 10px 10px 0 0;
@@ -1144,7 +1144,7 @@ ul.project-desc li {
     font-size: 14px;
     line-height: 22px;
     padding: 9px 16px;
-    background-color: #3d4a6e;
+    background-color: #D76E6E;
 
     -webkit-border: none;
        -moz-border: none;
@@ -1159,7 +1159,7 @@ ul.project-desc li {
 #subscribe .submit.focus,
 #subscribe .submit:hover {
 	color: #ffffff;
-    background-color: #3d4a6e;
+    background-color: #D76E6E;
 }
 
 /* 13.4 Success & Error
@@ -1168,7 +1168,7 @@ ul.project-desc li {
 .serror {
     top: 24px;
     right: 130px;
-    color: #2b344d;
+    color: #FFAAAA;
     position: absolute;
 }
 
@@ -1186,7 +1186,7 @@ ul.project-desc li {
     padding: 30px 0;
     overflow: hidden;
     position: relative;
-    background-color: #2b344d;
+    background-color: #FFAAAA;
 }
 
 /* 14.2 Anchor
@@ -1394,7 +1394,7 @@ fieldset[disabled] .btn {
 .btn.btn-nesto {
     color: #ffffff;
     letter-spacing: 1px;
-    background-color: #2b344d;
+    background-color: #FFAAAA;
 
     -webkit-border-radius: 4px;
        -moz-border-radius: 4px;
@@ -1411,7 +1411,7 @@ fieldset[disabled] .btn {
 .btn-nesto:active,
 .btn-nesto.active {
     color: #ffffff;
-    background-color: #3d4a6e;
+    background-color: #D76E6E;
 }
 
 
@@ -1419,7 +1419,7 @@ fieldset[disabled] .btn {
 ========================================================================== */
 .alert-nesto {
     color: #ffffff;
-    background-color: #2b344d;
+    background-color: #FFAAAA;
 
     -webkit-border-radius: 4px;
        -moz-border-radius: 4px;
@@ -1457,7 +1457,7 @@ fieldset[disabled] .btn {
     .navbar-nav > li:hover,
     .navbar-nav > li.active,
     .navbar-nav > li.active a {
-        color: #2b344d;
+        color: #FFAAAA;
         background-color: #ffffff;
     }
     .navbar-nav > li {
